--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,31 +18,42 @@ android {
             }
         }
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     externalNativeBuild {
-        ndkBuild {
-            path file('../jni/Android.mk')
-        }
+            ndkBuild {
+                path file('../jni/Android.mk')
+            }
 //        cmake {
 //            path "src/main/cpp/CMakeLists.txt"
 //            version "3.10.2"
 //        }
-
+        }
+    signingConfigs{
+        release{
+            storeFile file("my-release-key.jks")
+            storePassword "123456"
+            keyAlias "abrahamqian"
+            keyPassword "123456"
+        }
     }
-}
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    }
 
-dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    dependencies {
+        implementation fileTree(dir: "libs", include: ["*.jar"])
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-}
+        def appCenterSdkVersion = '3.3.0'
+        implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+        implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+        implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
+    }
